@@ -1,33 +1,0 @@
-# Copyright 2017 AT&T Intellectual Property.  All other rights reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-from oslo_versionedobjects import fields
-
-
-class BaseDeckhandEnum(fields.Enum):
-    def __init__(self):
-        super(BaseDeckhandEnum, self).__init__(valid_values=self.__class__.ALL)
-
-
-class DocumentField(BaseDeckhandEnum):
-
-    # A list of potentially valid statuses for a Document to have. This list 
-    # will evolve over time.
-    active = 'ACTIVE'
-    conflict_error = 'CONFLICT_ERROR'
-    merge_error = 'MERGE_ERROR'
-    substitute_error = 'SUBSTITUTE_ERROR'
-    warning = 'WARNING'
-
-    ALL = (active, conflict_error, merge_error, substitute_error, warning)
